# postgis-citygml-importer

./: LICENSE  README.md  citygml2pgsql.py  config.yaml  make_schema.sql  pyproject.toml
src/citygml2pgsql/: __init__.py  __main__.py  citygml2pgsql.py  gml_utils.py
