[project]
name = "citygml2pgsql"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.8"
dependencies = [
    "lxml>=6.0.0",
    "multiprocess>=0.70.18",
    "munch>=4.0.0",
    "psycopg2>=2.9.10",
    "pyyaml>=6.0.2",
    "shapely>=2.1.1",
    "tqdm>=4.67.1",
]

[project.scripts]
citygml2pgsql = "citygml2pgsql.citygml2pgsql:main"

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

